[metadata]
author = "Tzuni(Eva) Hsieh"
author_email = tzuni.eh@gmail.com
classifiers =
    Programming Language :: Python :: 3
description = tzunipy
long_description = file:README.md
long_description_content_type = text/markdown
name = tzunipy
project_urls =
    Documentation = https://github.com/pages/tzunieh/yo
    Source = https://github.com/tzunieh/yo
url = https://github.com/tzunieh/yo
version = 0.0.0

[options]
packages =
    tzunipy

package_dir =
    =src

include_package_data = True

# Add abstract package dependencies here (do not specify specific versions)
# for more information see:
# https://git.vzbuilders.com/pages/developer/python-guide/faq/abstract_vs_concrete_dependencies/
install_requires =
    bleach
    requests
    colored
    filetype
    requests
    selenium
    slugify

# By default new packages require at minimum the current supported Python release.
python_requires = >= 3.9

[options.extras_require]
# This config section allows you to define optional dependencies.  For the general case, the defaults will
# work fine.  So these settings aren't required.  However, many of the screwdriver CI Pipeline steps
# will install the appropriate extras for that step.  This makes it possible to install packages that install
# or enhance the functionality of the CI Pipeline step.
# Such as packages that implement plugins or themes for the step in question.

# Additional packages for testing (test step)
test =

# Additonal packages needed for documentation generation (doc_build/doc_publish steps)
# If you want to use a sphinx theme from a package, list it here.
doc_build =

# Additional packages needed for mypy type checking
mypy =

# Additional packages needed for pep8/pycodestyle style checking
pep8 =

# Additional packages needed for pylint code analysis
pylint =

[options.entry_points]
# Console script entry points are used to create wrapper scripts that run a specific function, the resulting wrapper
# is installed in the bin directory.

# They are defined using the following format:
#    scriptname = modulename:function
console_scripts =
    kk=tzunipy.kk_cli:main
